# Sound-island

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: release-trigger
.github/workflows/: ci.yml  release.yml
docs/: release-workflow.md
src/: App.tsx  SoundLab.tsx  Spectrum.tsx  Waveform.tsx  backend.ts  styles.css  types.ts  ucsCatalog.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: classify.rs  db.rs  file_ops.rs  lib.rs  main.rs  sound_lab.rs  translation.rs  ucs_catalog.rs  waveform.rs
