[package]
name = "sound-island"
version = "0.5.1"
description = "Local-first sound effects library manager"
authors = ["Sound Island contributors"]
license = "MIT"
repository = "https://github.com/roylyu66/sound-island"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "sound_island_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
hound = "3.5"
rusqlite = { version = "0.37", features = ["bundled", "modern_sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["all"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-drag = "2.1.1"
tauri-plugin-opener = "2"
walkdir = "2.5"
